final version, tested

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: mkitano <mkitano@student.42sp.org.br>      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/12/06 14:26:02 by mkitano           #+#    #+#              #
-#    Updated: 2025/12/21 09:45:34 by mkitano          ###   ########.fr        #
+#    Updated: 2025/12/21 15:55:01 by mkitano          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,9 +20,13 @@ INCLUDE_DIR = include
 
 SRC_FILES = main.c \
 		utils.c \
+		sim_utils.c \
 		parsing.c \
 		init.c \
 		clean.c \
+		philo.c \
+		monitor.c \
+
 
 SRCS = $(addprefix $(SRC_DIR)/, $(SRC_FILES))
 OBJS = $(addprefix $(OBJ_DIR)/, $(SRC_FILES:.c=.o))
